--- a/inst/readers/observations.Rmd
+++ b/inst/readers/observations.Rmd
@@ -6,10 +6,6 @@ date: "March 2021"
 output:
   pdf_document: default
   html_document: default
-vignette: >
-  %\VignetteEncoding{utf8}
-  %\VignetteIndexEntry{Observed Data in a Reaction Transport Model in R: accessory material}
-  %\VignetteEngine{knitr::rmarkdown}
 abstract: \noindent Here we show how to include observed data in the same graph as the output of a reaction-transport model. This can be used to estimate values of model parameters that best fit the observed data.
 ---
 
@@ -40,14 +36,14 @@ Consider the simple SIR model that you made in the class:
 ```{r, warning = FALSE, message = FALSE}
 state.SIR   <- c(S = 17500000, I = 1000, R = 0, Deceased = 0)
 
-parms.SIR   <- c(
+pars.SIR   <- c(
   b = 0.00000001,    # [1/ind/d], infection parameter 
   g = 0.07,          # [1/d],     recovery rate of infected individuals
   m = 0.007          # [1/d],     mortality rate of infected individuals
 )
 
-SIR <- function(t, state, parameters) {
-  with (as.list(c(state, parameters)), {
+SIR <- function(t, state, parms) {
+  with (as.list(c(state, parms)), {
 
     Infection  <- b*S*I
     Recovery   <- g*I
@@ -66,7 +62,7 @@ SIR <- function(t, state, parameters) {
 The output of the model looks as shown in the following figure:
 ```{r, fig.width=9, fig.height=3, warning = FALSE, message = FALSE, fig.align="center"}
 time.seq   <- seq(from=0, to=100, by=1)   # time sequence, in days
-out <- ode(y=state.SIR, times=time.seq, func=SIR, parms=parms.SIR)
+out <- ode(y=state.SIR, times=time.seq, func=SIR, parms=pars.SIR)
 plot(out, las=1, col=1:2, lty=1, mfrow=c(1,4))
 ```
 
@@ -86,10 +82,10 @@ In the model this state variable is called "Deceased", so we use the same name i
 We run the model with different values of the parameter *b*:
 
 ```{r, message = FALSE}
-p1 <- p2 <- p3 <- parms.SIR
-p1["b"] <- parms.SIR["b"]/2
-p2["b"] <- parms.SIR["b"]/5
-p3["b"] <- parms.SIR["b"]/10
+p1 <- p2 <- p3 <- pars.SIR
+p1["b"] <- pars.SIR["b"]/2
+p2["b"] <- pars.SIR["b"]/5
+p3["b"] <- pars.SIR["b"]/10
 
 out1 <- ode(y=state.SIR, times=time.seq, func=SIR, parms=p1)
 out2 <- ode(y=state.SIR, times=time.seq, func=SIR, parms=p2)
@@ -98,8 +94,10 @@ out3 <- ode(y=state.SIR, times=time.seq, func=SIR, parms=p3)
 
 Now we compare the model output to our records by setting "SIRdata" as the value of the input parameter ``obs``:
 ```{r, fig.width=6, fig.height=4, message = FALSE, warning=FALSE, fig.align="center"}
-plot(out, out1, out2, out3, obs=SIRdata, log="y", las=1, lty=1, lwd=2)
-legend("topleft", legend=c(parms.SIR["b"],p1["b"],p2["b"],p3["b"]), 
+plot(out, out1, out2, out3, 
+     obs=SIRdata,  # include external data
+     log="y", las=1, lty=1, lwd=2)
+legend("topleft", legend=c(pars.SIR["b"],p1["b"],p2["b"],p3["b"]), 
       col=1:4, lty=1, lwd=2, title="b")
 ```
 
@@ -118,20 +116,21 @@ Grid   <- setup.grid.1D(dx.1=0.0001, L=L, N=N)
 DiffO2 <- diffcoeff()$O2*86400   # molecular diffusion, m2/d
 tort   <- 1-log(por^2)           # tortuosity
 
-parms.O2 <- c(
+pars.O2 <- c(
   rO2cons = 1.5,             # rate constant, [/d]
   por     = por,             # porosity, [-]
   O2BW    = 0.3,             # BW concentration of O2, [mol/m3]
   DO2     = DiffO2/tort      # Sediment diffusion coeff, [m2/d]
 )
 
-names    <- "O2"             # name of state variable
-nspec    <- 1                # number of species
-state    <- rep(0, times=N)  # initial condition
+names     <- "O2"             # name of state variable
+nspec     <- 1                # number of species
+state.ini <- rep(0, times=N)  # initial condition
 
-O2func <- function(t, O2, parms){
+O2func <- function(t, state, parms){
   with (as.list(parms), {
     
+    O2 <- state
     O2.tran <- tran.1D(C=O2, C.up = O2BW, D = DO2, VF = por, dx = Grid)
     O2cons  <- rO2cons*O2
     
@@ -143,7 +142,7 @@ O2func <- function(t, O2, parms){
 
 The model output for the default model parameters looks as follows:
 ```{r, fig.height=3.5, fig.width=3.5, fig.align="center"}
-std <- steady.1D(y=state, func=O2func, parms=parms.O2, 
+std <- steady.1D(y=state.ini, func=O2func, parms=pars.O2, 
       nspec=nspec, dimens=N, names=names, positive=TRUE)
 plot(std, xyswap=TRUE, grid=Grid$x.mid, las=1, ylab="m", xlab="mM")
 ```
@@ -175,16 +174,16 @@ head(O2dat.ext, n=1)
 We run the model with different values of the parameter *rO2cons*. 
 
 ```{r}
-p1 <- p2 <- p3 <- parms.O2
-p1["rO2cons"] <- parms.O2["rO2cons"]/2
-p2["rO2cons"] <- parms.O2["rO2cons"]/5
-p3["rO2cons"] <- parms.O2["rO2cons"]/10
+p1 <- p2 <- p3 <- pars.O2
+p1["rO2cons"] <- pars.O2["rO2cons"]/2
+p2["rO2cons"] <- pars.O2["rO2cons"]/5
+p3["rO2cons"] <- pars.O2["rO2cons"]/10
 
-std1 <- steady.1D(y=state, func=O2func, parms=p1, 
+std1 <- steady.1D(y=state.ini, func=O2func, parms=p1, 
       nspec=nspec, dimens=N, names=names, positive=TRUE)
-std2 <- steady.1D(y=state, func=O2func, parms=p2, 
+std2 <- steady.1D(y=state.ini, func=O2func, parms=p2, 
       nspec=nspec, dimens=N, names=names, positive=TRUE)
-std3 <- steady.1D(y=state, func=O2func, parms=p3, 
+std3 <- steady.1D(y=state.ini, func=O2func, parms=p3, 
       nspec=nspec, dimens=N, names=names, positive=TRUE)
 ```
 
@@ -202,10 +201,11 @@ Finally, we plot the model results together with the external data. We include t
 
 ```{r, fig.height=3.5, fig.width=4, fig.align="center"}
 plot(std, std1, std2, std3, xyswap=TRUE, grid=Grid$x.mid, 
-     obs = O2dat.ext, obspar = list(pch=16, col="green"),
+     obs = O2dat.ext, # external data included
+     obspar = list(pch=16, col="green"),
      lty=1, lwd=2, las=1, ylab="m", xlab="mM")
 legend("bottomright", col=1:4, lty=1, lwd=2, title="rO2cons [/d]", 
-   legend=c(parms.O2["rO2cons"], p1["rO2cons"], p2["rO2cons"], p3["rO2cons"]))
+   legend=c(pars.O2["rO2cons"], p1["rO2cons"], p2["rO2cons"], p3["rO2cons"]))
 ```
 
 # References
